# JniSample

./: .gitignore  Readme.md  pom.xml
src/main/java/com/jnisample/: LibraryLoader.java  Main.java
src/main/jni/: CMakeLists.txt
src/main/jni/com/jnisample/: Main.cpp  Main.h
src/main/resources/: log4j.properties
